src/test/deca/syntax/invalid/31_bad_selection.deca
// Description:
//    Test d'une mauvaise selection
//
// Resultats:
//    Ligne 11
//
// Historique:
//    cree le 01/01/2023

{
    A a = c.println();
}